[gd_scene load_steps=3 format=3 uid="uid://cfxb7uw370upc"]

[ext_resource type="Script" path="res://scenes/menu_UI/victory_menu/victory_menu.gd" id="1_bx4cb"]
[ext_resource type="Theme" uid="uid://70iajjmvmgls" path="res://scenes/menu_UI/end_mission_menu_theme.tres" id="2_4uh4q"]

[node name="VictoryMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bx4cb")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -169.0
offset_top = -78.0
offset_right = 169.0
offset_bottom = 78.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
theme = ExtResource("2_4uh4q")

[node name="Title" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Well done !
You succeeded in helping a criminal escape."
horizontal_alignment = 1

[node name="RichTextLabel" type="RichTextLabel" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Thanks! Here's the rest of the money. I might need your help again soon."
fit_content = true

[node name="spacer" type="Control" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="MainMenu" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Main Menu"

[node name="Quit" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Quit"

[node name="NextMission" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Continue obstructing
the Law"

[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer/MainMenu" to="." method="return_to_main_menu"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer/Quit" to="." method="quit_game"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer/NextMission" to="." method="next_mission"]
